# tyassist

./: .gitignore  .gitmodules  README.md  default_config.yml  dpexec.py  requirements.txt  setting.cfg  tyassist.py  tyassist_build.sh  tyassist_compare.sh  tyassist_demo.sh  tyassist_profile.sh  tyassist_test.sh  tyexec.py  version
base/: __init__.py  base_custom_preprocess.py  base_dataset.py  base_model.py  classification.py  dataset_base.py  detection.py  model_base.py  pose.py  segmentation.py
config/: caffe_centernet_dla34_part2.py  caffe_centernet_dla34_part2.yml  caffe_squeezenet_v1.1.yml  mxnet_squeezenet_v1.1.yml  onnx_squeezenet_v1.1.yml  pytorch_squeezenet_v1.1.yml  pytorch_yolov5.yml  tensorflow_imgD.py  tensorflow_imgD.yml
custom/: __init__.py  base_custom_preprocess.py
datasets/: __init__.py  coco.py  dataset_base.py  imagenet.py  voc.py  widerface.py
doc/: 云天励飞TyAssist工具使用说明.docx
examples/caffe_centernet_dla34_part2/: compare.sh  config.yml  custom_preprocess.py
examples/caffe_multi_input_case/: config.yml  custom_preprocess.py
examples/caffe_squeezenet_v1_1/: config.yml  demo.sh  model_impl.py
examples/dbg_case/: README.md  sample.py
examples/dgb_case/: sample.py
examples/multi_dims/: config.yml  custom_preprocess.py  multi_dims.onnx
examples/mxnet_squeezenet_v1_1/: build.sh  compare.sh  config.yml  model_impl.py
examples/onnx_input2/: config.yml  simplest_input2.onnx
examples/onnx_resnet50/: config.yml  config_bs8.yml  dataset.py  model_impl.py
examples/onnx_resnet50_qnn/: config.yml
examples/onnx_squeezenet_v1_1/: build_nnp400.sh  config.yml  config_nnp400.yml  dataset.py  model_impl.py  test.sh
examples/onnx_yolov5s/: README.md  config.yml  model_impl.py
examples/onnx_yolov5s_custom/: DetectionOut_arm.cc  DetectionOut_inferer.py  README.md  (+6 more)
models/: __init__.py  caffe_squeezenet_v1_1.py  model_base.py  mxnet_squeezenet_v1_1.py  onnx_squeezenet_v1_1.py  pytorch_squeezenet_v1_1.py
scripts/: get.sh  get_data.sh  get_models.sh
src/: __init__.py  base_infer.py  base_profiler.py  base_tyexec.py  dpexec_impl.py  infer.py  infer_relay.py  nnp3xx_func.py  nnp3xx_infer.py  nnp3xx_profiler.py  nnp3xx_tyexec.py  nnp4xx_func.py  nnp4xx_infer.py  nnp4xx_profiler.py  nnp4xx_tyexec.py  onnx_infer.py  profiler.py
tools/perf_test/: CMakeLists.txt  build.sh  run.sh  run_host.sh
tools/perf_test/src/: main.cpp
tools/perf_test/src/common/: data_process.h  device_process.cpp  device_process.h  get_time.h  model_process.cpp  model_process.h  random.cpp  random.h  utils.cpp  utils.h
utils/: __init__.py  check.py  compare.py  dist_metrics.py  enum_type.py  gen_config.py  glog_format.py  metrics.py  nnp_func.py  parser.py  postprocess.py  preprocess.py  utils.py
(+26 files in other folders)
